--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build Angular Application
-FROM --platform=$BUILDPLATFORM node:22-alpine3.19 as builder
+FROM node:18-alpine as builder
 
 WORKDIR /project
 
