--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,19 @@
+version: '3.8'
 services:
-  web:
-    build:
-      context: frontend
-      target: builder
-    ports:
-      - 4200:4200
   backend:
-    build: backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
-      - POSTGRES_DB=example
-    networks:
-      - spring-postgres
-  db:
-    image: postgres
-    restart: always
-    secrets:
-      - db-password
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    networks:
-      - spring-postgres
+      - SPRING_PROFILES_ACTIVE=prod
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "4200:4200"
     environment:
-      - POSTGRES_DB=example
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-    expose:
-      - 5432
-volumes:
-  db-data:
-secrets:
-  db-password:
-    file: db/password.txt
-networks:
-  spring-postgres:
+      - NODE_ENV=development
