--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./backend
-        file: Dockerfile
+        file: ./backend/Dockerfile
         push: true
         tags: ivanakoceva/db:latest
 
@@ -34,7 +34,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./frontend
-        file: Dockerfile
+        file: ./frontend/Dockerfile
         push: true
         tags: ivanakoceva/angular:latest
 
