--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
       with:
         version: 'v1.19.7'
 
+    - name: Create .kube directory
+      run: mkdir -p $HOME/.kube
+
     - name: Write kubeconfig
       run: |
         echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
