fixed the compose file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,11 @@
 # syntax=docker/dockerfile:1.4
+FROM maven:3.8.5-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-FROM maven:3.8.5-eclipse-temurin-17
+FROM eclipse-temurin:17-jdk-jammy
+WORKDIR /app
+COPY --from=build /app/target/*.jar application.jar
 EXPOSE 8080
-ARG JAR_FILE=target/NotesApplication-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java", "-jar", "application.jar"]
